[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/Azonix.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/start/painel_jogo.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 45
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 45
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 45
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="painel_jogo" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 83.0891 ]
}

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = -1388.83
margin_top = -868.098
margin_right = 2651.17
margin_bottom = 2049.9
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="user_name" type="Label" parent="."]
margin_left = -0.950012
margin_top = 2.95
margin_right = 1023.05
margin_bottom = 113.95
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="novo_jogo" type="Button" parent="."]
margin_left = 85.4218
margin_top = 206.715
margin_right = 396.422
margin_bottom = 286.715
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "new game"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ranking_geral" type="Button" parent="."]
margin_left = 86.4218
margin_top = 333.845
margin_right = 386.422
margin_bottom = 413.845
focus_mode = 0
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "RANKING"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ranking_user" type="Button" parent="."]
margin_left = 86.4218
margin_top = 267.551
margin_right = 386.422
margin_bottom = 347.551
focus_mode = 0
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "player RANKING"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logout" type="Button" parent="."]
margin_left = 86.4218
margin_top = 391.411
margin_right = 386.422
margin_bottom = 471.411
focus_mode = 0
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "Logout"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Controls" type="Button" parent="."]
margin_left = 657.32
margin_top = 391.411
margin_right = 957.32
margin_bottom = 471.411
focus_mode = 0
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "Controls"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Credits" type="Button" parent="."]
margin_left = 709.267
margin_top = 347.551
margin_right = 942.267
margin_bottom = 405.551
focus_mode = 0
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "Credits"
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="top_player" type="Node2D" parent="."]

[node name="player_label" type="Label" parent="top_player"]
margin_left = 86.0
margin_top = 525.0
margin_right = 280.0
margin_bottom = 552.0
custom_fonts/font = SubResource( 1 )
text = "top player:"
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="player_name" type="Label" parent="top_player"]
margin_left = 302.0
margin_top = 525.0
margin_right = 931.0
margin_bottom = 552.0
custom_fonts/font = SubResource( 1 )
text = "place holder"
valign = 1
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HTTPRequest" type="HTTPRequest" parent="top_player"]
[connection signal="pressed" from="novo_jogo" to="." method="_on_novo_jogo_pressed"]
[connection signal="pressed" from="ranking_geral" to="." method="_on_ranking_geral_pressed"]
[connection signal="pressed" from="ranking_user" to="." method="_on_ranking_user_pressed"]
[connection signal="pressed" from="logout" to="." method="_on_logout_pressed"]
[connection signal="pressed" from="Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="request_completed" from="top_player/HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
